# codeshock

./: .gitignore  README.md  pyproject.toml
src/claudex/: cli.py  config.py  context.py  display.py  launcher.py  reviewer.py  session.py  watcher.py
src/codeshock/: cli.py  config.py  context.py  display.py  launcher.py  reviewer.py  server.py  session.py  watcher.py
src/codeshock/web/: index.html
tests/: test_config.py  test_context.py  test_reviewer.py  test_session.py
