[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudex"
version = "1.0.0"
description = "Claude Code generates, Codex reviews. Split terminal, live dashboard, shared context."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pavan Kumar", email = "kpavan3009@gmail.com"},
]
keywords = ["claude", "codex", "ai", "code-review", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "watchdog>=3.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Kpavan3009/claudex"
Repository = "https://github.com/Kpavan3009/claudex"
Issues = "https://github.com/Kpavan3009/claudex/issues"

[project.scripts]
claudex = "claudex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
